# oxidlp

./: Cargo.toml  README.md  config.example.toml
src/: app.rs  config.rs  events.rs  main.rs
src/ui/: input.rs  mod.rs
src/worker/: mod.rs  ytdlp.rs
