[package]
name = "oxidlp"
version = "0.1.0"
edition = "2021"
description = "A beautiful TUI YouTube downloader"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
color-eyre = "0.6"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
indicatif = "0.18.3"
serde_json = "1.0.147"
sysinfo = "0.32"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
